CommentList: fix line breaks in comments
Set line height of comments to 10px.

--- a/files/css/1.css
+++ b/files/css/1.css
@@ -121,6 +121,10 @@ FIXME http://redmine.emweb.be/issues/1144
     background: transparent !important;
 }
 
+.thechess-forum-comments .Wt-tv-c {
+    line-height: 10px !important;
+}
+
 .Wt-auth-login * {
     width: auto !important;
 }
